--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
+    <title>20160831</title>
     <!-- BootstrapのCSS読み込み -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- jQuery読み込み -->
@@ -65,7 +65,7 @@
                 <!--ページタイトル-->
                 <h3>ANNYYS_D版　操作マニュアル</h3>
              
-                <hr class="hborder">
+               
 
                 <!--本文-->
                 <div id="annys-tx">
