--- a/public_html/020_000hajimeni.html
+++ b/public_html/020_000hajimeni.html
@@ -36,16 +36,17 @@
                     <div id="gnavi" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a href="000_000index.html">TOP</a></li>
-                            <li><a href="000_001mokuji.html">目次</a></li>
-                            <li><a href="010_000hajimeni.html">はじめに</a></li>
-                            <li><a href="010_001setup.html">セットアップ</a></li>
-                            <li><a href="002-001.html">診療の流れ</a></li>
-                            <li><a href="002-002.html">来院受付</a></li>
-                            <li><a href="002-003.html">診療画面</a></li>
-                            <li><a href="002-004.html">カルテ記録</a></li>
-                            <li><a href="002-005.html">患者情報</a></li>
-                            <li><a href="002-006.html">マスタ管理</a></li>
-                            <li><a href="002-008.html">基本設計</a></li>
+                            <li><a href="010_000mokuji.html">目次</a></li>
+                            <li><a href="020_000hajimeni.html">はじめに</a></li>
+                            <li><a href="030_000setup.html">セットアップ</a></li>
+                            <li><a href="040-000sinsatunonagare.html">診察の流れ</a></li>
+                            <li><a href="050-000raiinuketuke.html">来院受付</a></li>
+                            <li><a href="060-000sinsatugamen.html">診察画面</a></li>
+                            <li><a href="070-000karutekiroku.html">カルテ記録</a></li>
+                            <li><a href="080-000kanjajouhou.html">患者情報</a></li>
+                            <li><a href="090-000masterkanri.html">マスタ管理</a></li>
+                            <li><a href="010-000kihonsekkei.html">基本設計</a></li>
+                            <li><a href="011-000nitireserenkei.html">日レセ連携</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -141,9 +142,9 @@
                 <blockquote>メンテナンス性</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>　ANNYYS_D版はシステムのメンテナンスや改善が安全に行えるようになっています。通常業務から切り離すことのできないシステムはよほどの事がない限り運用を停止する事はできません。医療関係に特化した経験ではありますがANNYYS®では「稼働を止めずにメンテナンスを行う」事が求められてきました。そしてこれらを実現する手段を持っています。ANNYYS_D版は通常稼働を維持しながら必要最低限の影響で諸問題を解決する事ができます</p>
-                    <p>　この「安全にメンテナンスを行う」手法は「自分だけのカルテ」を実現するためのカスタマイズを行う場合にも役に立ちます。例えば機能向上のためのカスタマイズを行った後に新たな問題が発生してしまう事があります。そのとき「元の状態に戻し、いち早く原因と解決策を調査する」事重要になりますが、ANNYYS_D版はある簡単な約束事を実行してもらうだけでこのような作業を行う事ができます。ちょっとした事改修であれば問題ないように思えるかもしれませんが、このような事態は「よくある」事で小さい事が累積するともう元の状態に戻れなくなります。この問題は、最初はそれほど大きな問題ではありませんが、やがて問題が表面化しはじめます。そしてシステム管理には大きなストレスや負担がかかりシステムの維持費にも影響してきます。ファイル同士が密接に関係し合うFileMakerソリューションでは、ある一部の一部の変更でも全体に影響している可能性がよくあるからです。</p>
-                    <p>　ANNYYS_D版にはこれまでの経験とノウハウの蓄積から「安全性・機能性・拡張性」に優位な構造を持ち合わせています。</p>
+                    <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版はシステムのメンテナンスや改善が安全に行えるようになっています。通常業務から切り離すことのできないシステムはよほどの事がない限り運用を停止する事はできません。医療関係に特化した経験ではありますがANNYYS®では「稼働を止めずにメンテナンスを行う」事が求められてきました。そしてこれらを実現する手段を持っています。ANNYYS_D版は通常稼働を維持しながら必要最低限の影響で諸問題を解決する事ができます</p>
+                    <p>&nbsp;&nbsp;&nbsp;この「安全にメンテナンスを行う」手法は「自分だけのカルテ」を実現するためのカスタマイズを行う場合にも役に立ちます。例えば機能向上のためのカスタマイズを行った後に新たな問題が発生してしまう事があります。そのとき「元の状態に戻し、いち早く原因と解決策を調査する」事重要になりますが、ANNYYS_D版はある簡単な約束事を実行してもらうだけでこのような作業を行う事ができます。ちょっとした事改修であれば問題ないように思えるかもしれませんが、このような事態は「よくある」事で小さい事が累積するともう元の状態に戻れなくなります。この問題は、最初はそれほど大きな問題ではありませんが、やがて問題が表面化しはじめます。そしてシステム管理には大きなストレスや負担がかかりシステムの維持費にも影響してきます。ファイル同士が密接に関係し合うFileMakerソリューションでは、ある一部の一部の変更でも全体に影響している可能性がよくあるからです。</p>
+                    <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版にはこれまでの経験とノウハウの蓄積から「安全性・機能性・拡張性」に優位な構造を持ち合わせています。</p>
              </div>
              <p><img class="center-block" src="" width="500" height="300" alt="ダミー"></p> 
             </div>
@@ -170,11 +171,11 @@
                 <blockquote>サポート</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>　これは大きな問題でした。フリーウェアは無償で利用できるといった解釈が一般的です。しかし完全に利用者の責任においてのみその利用は認められています。ただ電子カルテのような専門的で法的にも縛りのある分類のものはどうしても細かなサポートが必要です。こういった問題の解決にとても多くの時間がかかってしましました。結果基本的には単純な事ですが無償からはじまり細やかな有償サービスを展開する事を目指すようにしました。ANNYYS_D版は「無償でのスタートもできる」という部分がANNYYS_D版の特徴です。</p>
-                    <p>　サポートといってもこれらは多岐におよびます。</p>
-                    <p>　パートナーディベロッパに機器類の調達～セットアップなどのサポートや各種サービスを委任できる体制とパートナ間でのコニュニケーションを構築する事がANNYYS_D事務局の行う事業の一つです。</p><br>
-                    <p>　医療情報化の分野ではまだまだ多くの工夫や知恵が必要だと感じています。</p>
-                    <p>　FileMakerのように分かりやすいプラットホームを基盤にして医師・医療関係者・ディベロッパのそれぞれが隔たりのない情報交換を行う事で新たな知恵や工夫が生まれ、このネットワークが強力なバックアップとして機能するようになる事をANNYYS_D版事務局は目指しています。</p>
+                    <p>&nbsp;&nbsp;&nbsp;これは大きな問題でした。フリーウェアは無償で利用できるといった解釈が一般的です。しかし完全に利用者の責任においてのみその利用は認められています。ただ電子カルテのような専門的で法的にも縛りのある分類のものはどうしても細かなサポートが必要です。こういった問題の解決にとても多くの時間がかかってしましました。結果基本的には単純な事ですが無償からはじまり細やかな有償サービスを展開する事を目指すようにしました。ANNYYS_D版は「無償でのスタートもできる」という部分がANNYYS_D版の特徴です。</p>
+                    <p>&nbsp;&nbsp;&nbsp;サポートといってもこれらは多岐におよびます。</p>
+                    <p>&nbsp;&nbsp;&nbsp;パートナーディベロッパに機器類の調達～セットアップなどのサポートや各種サービスを委任できる体制とパートナ間でのコニュニケーションを構築する事がANNYYS_D事務局の行う事業の一つです。</p><br>
+                    <p>&nbsp;&nbsp;&nbsp;医療情報化の分野ではまだまだ多くの工夫や知恵が必要だと感じています。</p>
+                    <p>&nbsp;&nbsp;&nbsp;FileMakerのように分かりやすいプラットホームを基盤にして医師・医療関係者・ディベロッパのそれぞれが隔たりのない情報交換を行う事で新たな知恵や工夫が生まれ、このネットワークが強力なバックアップとして機能するようになる事をANNYYS_D版事務局は目指しています。</p>
                 </div>
              <p><img class="center-block" src="images/001.png" alt="サポート"></p> 
             </div>
