--- a/public_html/000_000index.html
+++ b/public_html/000_000index.html
@@ -36,16 +36,17 @@
                     <div id="gnavi" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a href="000_000index.html">TOP</a></li>
-                            <li><a href="000_001mokuji.html">目次</a></li>
-                            <li><a href="010_000hajimeni.html">はじめに</a></li>
-                            <li><a href="010_001setup.html">セットアップ</a></li>
-                            <li><a href="002-001.html">診療の流れ</a></li>
-                            <li><a href="002-002.html">来院受付</a></li>
-                            <li><a href="002-003.html">診療画面</a></li>
-                            <li><a href="002-004.html">カルテ記録</a></li>
-                            <li><a href="002-005.html">患者情報</a></li>
-                            <li><a href="002-006.html">マスタ管理</a></li>
-                            <li><a href="002-008.html">基本設計</a></li>
+                            <li><a href="010_000mokuji.html">目次</a></li>
+                            <li><a href="020_000hajimeni.html">はじめに</a></li>
+                            <li><a href="030_000setup.html">セットアップ</a></li>
+                            <li><a href="040-000sinsatunonagare.html">診察の流れ</a></li>
+                            <li><a href="050-000raiinuketuke.html">来院受付</a></li>
+                            <li><a href="060-000sinsatugamen.html">診察画面</a></li>
+                            <li><a href="070-000karutekiroku.html">カルテ記録</a></li>
+                            <li><a href="080-000kanjajouhou.html">患者情報</a></li>
+                            <li><a href="090-000masterkanri.html">マスタ管理</a></li>
+                            <li><a href="010-000kihonsekkei.html">基本設計</a></li>
+                            <li><a href="011-000nitireserenkei.html">日レセ連携</a></li>
                         </ul>
                     </div>
                 </nav>
