--- a/public_html/010_000mokuji.html
+++ b/public_html/010_000mokuji.html
@@ -36,17 +36,17 @@
                     <div id="gnavi" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a href="000_000index.html">TOP</a></li>
-                            <li><a href="000_001mokuji.html">目次</a></li>
-                            <li><a href="010_000hajimeni.html">はじめに</a></li>
-                            <li><a href="010_001setup.html">セットアップ</a></li>
-                            <li><a href="002-001.html">診療の流れ</a></li>
-                            <li><a href="002-002.html">来院受付</a></li>
-                            <li><a href="002-003.html">診療画面</a></li>
-                            <li><a href="002-004.html">カルテ記録</a></li>
-                            <li><a href="002-005.html">患者情報</a></li>
-                            <li><a href="002-006.html">マスタ管理</a></li>
-                            <li><a href="002-008.html">基本設計</a></li>
-                            <li><a href="002-008.html">日レセ連</a></li>
+                            <li><a href="010_000mokuji.html">目次</a></li>
+                            <li><a href="020_000hajimeni.html">はじめに</a></li>
+                            <li><a href="030_000setup.html">セットアップ</a></li>
+                            <li><a href="040-000sinsatunonagare.html">診察の流れ</a></li>
+                            <li><a href="050-000raiinuketuke.html">来院受付</a></li>
+                            <li><a href="060-000sinsatugamen.html">診察画面</a></li>
+                            <li><a href="070-000karutekiroku.html">カルテ記録</a></li>
+                            <li><a href="080-000kanjajouhou.html">患者情報</a></li>
+                            <li><a href="090-000masterkanri.html">マスタ管理</a></li>
+                            <li><a href="010-000kihonsekkei.html">基本設計</a></li>
+                            <li><a href="011-000nitireserenkei.html">日レセ連携</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                001-001　はじめに
+                020-000　はじめに
                 <div class="index_hr"></div>
                  <hr class="hborder">
                <ol type="1">
@@ -95,7 +95,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                001-002　セットアップ
+                030-000　セットアップ
                 <div class="index_hr"></div>
                 <hr class="hborder">               
                 <ol type="1">
@@ -108,7 +108,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-001　診察の流れ
+                040-000　診察の流れ
                 <div class="index_hr"></div>
                 <hr class="hborder">               
                 <ol type="1">
@@ -120,7 +120,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-002　来院受付
+                050-000　来院受付
                 <div class="index_hr"></div>
                  <hr class="hborder">
                 <ol type="1">
@@ -138,7 +138,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-003　診察画面
+                060-000　診察画面
                  <div class="index_hr"></div>
                   <hr class="hborder">
                 <ol type="1">
@@ -162,7 +162,7 @@
             </div>  
             
             <div class="col-md-offset-1 col-md-3">
-                002-004　カルテ記録
+                070-000　カルテ記録
                 <div class="index_hr"></div>
                 <hr class="hborder">
                 <ol type="1">
@@ -199,7 +199,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-005　患者情報
+                080-000　患者情報
                  <div class="index_hr"></div>
                  <hr class="hborder">
                 <ol type="1">
@@ -225,7 +225,7 @@
             </div> 
             
             <div class="col-md-offset-1 col-md-3">
-                002-006　マスタ管理
+                090-000　マスタ管理
              <div class="index_hr"></div>
              <hr class="hborder">
                 <ol type="1">
@@ -240,7 +240,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-007　基本設計
+                010-000　基本設計
                  <div class="index_hr"></div>
                  <hr class="hborder">
                 <ol type="1">
@@ -260,7 +260,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                002-008　日レセ連携
+                011-000　日レセ連携
                  <div class="index_hr"></div>
                  <hr class="hborder">
                 <ol type="1">
