--- a/public_html/030_000setup.html
+++ b/public_html/030_000setup.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <figure>
-        <figcaption>セットアップ2</figcaption>
+        <figcaption>セットアップ</figcaption>
         <ul>
             <li>ANNYYS_Dパッケージ内容とファイルの設置場所</li>
         
