--- a/public_html/[000_000]index.html
+++ b/public_html/[000_000]index.html
@@ -35,18 +35,18 @@
                     </div>
                     <div id="gnavi" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="000_000index.html">TOP</a></li>
-                            <li><a href="010_000mokuji.html">目次</a></li>
-                            <li><a href="020_000hajimeni.html">はじめに</a></li>
-                            <li><a href="030_000setup.html">セットアップ</a></li>
-                            <li><a href="040-000sinsatunonagare.html">診察の流れ</a></li>
-                            <li><a href="050-000raiinuketuke.html">来院受付</a></li>
-                            <li><a href="060-000sinsatugamen.html">診察画面</a></li>
-                            <li><a href="070-000karutekiroku.html">カルテ記録</a></li>
-                            <li><a href="080-000kanjajouhou.html">患者情報</a></li>
-                            <li><a href="090-000masterkanri.html">マスタ管理</a></li>
-                            <li><a href="010-000kihonsekkei.html">基本設計</a></li>
-                            <li><a href="011-000nitireserenkei.html">日レセ連携</a></li>
+                            <li><a href="[000_000]index.html">TOP</a></li>
+                            <li><a href="[010_000]mokuji.html">目次</a></li>
+                            <li><a href="[020_000]hajimeni.html">はじめに</a></li>
+                            <li><a href="[030_000]setup.html">セットアップ</a></li>
+                            <li><a href="[040_000]nagare.html">診察の流れ</a></li>
+                            <li><a href="[050_000]uketsuke.html">来院受付</a></li>
+                            <li><a href="[060_000]gamen.html">診察画面</a></li>
+                            <li><a href="[070_000]karute.html">カルテ記録</a></li>
+                            <li><a href="[080_000]kanja.html">患者情報</a></li>
+                            <li><a href="[090_000]master.html">マスタ管理</a></li>
+                            <li><a href="[010_000]sekkei.html">基本設計</a></li>
+                            <li><a href="[011_000]renkei.html">日レセ連携</a></li>
                         </ul>
                     </div>
                 </nav>
