--- a/public_html/[010_000]mokuji.html
+++ b/public_html/[010_000]mokuji.html
@@ -159,7 +159,7 @@
             </div>  
             
             <div class="col-md-offset-1 col-md-3">
-                <h4>070-000　カルテ記録</h4>>
+                <h4>070-000　カルテ記録</h4>
                 <div class="index_hr"></div>
                 <ol type="1">
                     <li>カルテ記録</li>
