--- a/public_html/[000_000]index.html
+++ b/public_html/[000_000]index.html
@@ -71,13 +71,13 @@
                 <!--本文-->
                 <div id="annys-tx">
                 <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版は、ANNYYS®のコンセプト「いつでも、だれでも、どのようにでも」を引き継いで創られた、FileMakerプラットホームで動く電子カルテソリューションです。</p>
-                <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版を正常に動かすには簡単ないくつかの準備が必要ですが、これらはパソコンを扱う基本的な経験があれば誰でも行う事が可能です。またダウンロードしたファイルの中には全ての必要なファイル類が揃っていますので本文以下にある「ANNYYS_D版の特徴」をご覧いただき、まずはANNYYS_D版の「セットアップ」を参照しご自分の環境に合わせた準備を行ってください。</p>
-                <p>&nbsp;&nbsp;&nbsp;準備ができればANNYYS_D版はすぐに利用を始められます。使っていく中で詳しい操作方法が知りたくなればANNYYS_D版の「操作マニュアル」から目的の項目を探して参照してください。</p><br>
-                <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版を使い続けているうちに「こういう機能があったらな」とか「こうなっていればいいな」と感じる事があると思います。ANNYYS_D版はこのような要望に合わせたカスタマイズが安全に行えるように設計されています。カスタマイズするには次の２つ方法があります。</p>
-                <p>&nbsp;&nbsp;&nbsp;最初はANNYYS_D版パートナーディベロッパに依頼するという方法です。ANNYYS_D版のカスタマイズ要望に応える事が出来るFileMakerディベロッパは全国に存在します。ANNYYS_D版事務局にお問い合わせ頂ければご要望の内容をお伺いし予算や適切なディベロッパをご紹介できます。パートナーディベロッパはウェブサイト(http://dev.annyys.net)からも検索できます。</p>
-                <p>&nbsp;&nbsp;&nbsp;次に「自身でカスタマイズ」するという方法です。ANNYYS_D版のベースとなっているFileMakerという製品は「誰でも簡単に扱える」特徴があるデータベースソフトウェアです。ちょっとした画面レイアウトの変更であれば誰でもすぐに実行可能です。少し勉強すれば短時間でプログラマーがつくったようなソリューションを作る事ができます。医療業界においては特に日本ユーザーメード医療IT研究会（略称J-SUMMITS: http://www.j-summits.jp/）では多くの医療現場における事例の紹介されており、実に多くの医療関係者の方々が自分のスタイルに合ったシステム構築事例が見つかります。</p>
-                <p>&nbsp;&nbsp;&nbsp;FileMaker日本法人http://www.filemaker.co.jp/)においても各種セミナーや講習会が全国で行われていますので、勉強・相談できる機会はいつでもあります。ANNYYS_D版事務局ではITに関する専門的な知識を持たない方でもどうしたらそうできるかをご案内していますのでいつでもお問合せください。</p><br>
-                <p>&nbsp;&nbsp;&nbsp;既にFileMakerに関する深い知識と経験をお持ちの場合は「ANNYYS_D版の仕様」へ足を踏み入れたくなるかもしれませんこれにはプロの知識と技術のノウハウが含まれている貴重な資料です。また、ANNYYS_D版をカスタマイズするときや、現在抱えている問題の根本を解決するための具体的な資料としても大いに役立つはずです。一つ上のレベルでANNYYS_D版を管理できれば、それはソリューションの安定や安全性、さらにはソリューションの性能向上をもたらすことになるでしょう。</p>
+                <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版を正常に動かすにはいくつかの簡単な準備が必要ですが、これらはパソコンを扱う基本的な経験があれば誰でも行う事ができます。またダウンロードしたファイルの中には全ての必要なファイル類が揃っていますので本文以下にある<strong>「ANNYYS_D版の特徴」</strong>をご覧いただき、まずは<strong>ANNYYS_D版の「セットアップ」</strong>を参照しご自分の環境に合わせた準備を行ってください。</p>
+                <p>&nbsp;&nbsp;&nbsp;準備ができればANNYYS_D版はすぐに利用を始められます。使っていく中で詳しい操作方法を知りたい場合は、<strong>ANNYYS_D版の「操作マニュアル」</strong>から目的の項目を探して参照してください。</p><br>
+                <p>&nbsp;&nbsp;&nbsp;ANNYYS_D版を使い続けているうちに、「こういう機能があったらな」とか「こうなっていればいいな」と感じる事があると思います。ANNYYS_D版は、このような要望に合わせたカスタマイズが安全に行えるように設計されています。カスタマイズするには次の２つ方法があります。</p>
+                <p>&nbsp;&nbsp;&nbsp;最初はANNYYS_D版パートナーディベロッパに依頼するという方法です。ANNYYS_D版のカスタマイズ要望に応える事が出来るFileMakerディベロッパは全国に存在します。ANNYYS_D版事務局にお問い合わせ頂ければ、ご要望の内容をお伺いし予算や適切なディベロッパをご紹介できます。パートナーディベロッパは、ウェブサイト (http://dev.annyys.net) からも検索できます。</p>
+                <p>&nbsp;&nbsp;&nbsp;次に「ご自身でカスタマイズ」するという方法です。ANNYYS_D版のベースとなっているFileMakerという製品は、「誰でも簡単に扱える」特徴があるデータベースソフトウェアです。ちょっとした画面レイアウトの変更であれば、誰でもすぐに実行可能です。少し勉強すれば、短時間でプログラマーが作ったようなソリューションを作る事ができます。医療業界においては、特に日本ユーザーメード医療IT研究会（略称 J-SUMMITS: http://www.j-summits.jp/）では多くの医療現場における事例の紹介されており、実に多くの医療関係者の方々が自分のスタイルに合ったシステム構築事例が見つかります。</p>
+                <p>&nbsp;&nbsp;&nbsp;FileMaker 日本法人 (http://www.filemaker.co.jp/) においても、各種セミナーや講習会が全国で行われていますので、勉強・相談できる機会はいつでもあります。ANNYYS_D版事務局では、ITに関する専門的な知識を持たない方でもシステム構築に関するご案内をしています。いつでもお問合せください。</p><br>
+                <p>&nbsp;&nbsp;&nbsp;既にFileMakerに関する深い知識と経験をお持ちの場合は、<strong>「ANNYYS_D版の仕様」</strong>へ足を踏み入れたくなるかもしれません。これにはプロの知識と技術のノウハウが含まれている貴重な資料です。また、ANNYYS_D版をカスタマイズする時や、現在抱えている問題の根本を解決するための具体的な資料としても大いに役立つはずです。一つ上のレベルでANNYYS_D版を管理できれば、それはソリューションの安定や安全性、さらにはソリューションの性能向上をもたらすことになるでしょう</p>
              </div>
             </div>
             <div class="col-md-2" style="background-color:white;"></div>
