--- a/public_html/[030_000]setup.html
+++ b/public_html/[030_000]setup.html
@@ -60,14 +60,14 @@
             <div class="col-md-3" style="background-color:white;">
             <figure>
                 <figcaption>セットアップ</figcaption>
-                <ul>
+                <ul style="list-style: none;">
                     <li>ANNYYS_Dパッケージ内容とファイルの設置場所</li>
 
                     <li>動作環境</li>
                     <li>ネットワークの構成例とFileMakerProのインストール</li>
-                    <li><ul>
+                    <li><ul style="list-style: none;">
                         <li>FileMaker Server(Advenced)およびFileMakerProのインストール</li>
-                    </ul></li>
+                        </ul></li>
                     <li>セキュリティ</li>
                 </ul>
             </figure>
@@ -80,8 +80,8 @@
                 <blockquote>セットアップ</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;ANNYYS_Dを正しく機能させるには専用のプラグインとJAVA実行環境が必要です。この文書は最後まで読んでください。</p> 
-                    <p>&nbsp;&nbsp;&nbsp;※中耳事項】本番環境においてFileMaker Server(Advanced)無しでの運用は推奨していません。動作速度が他の端末の処理内容によって大きく左右されやすく実用において動作が非常になることがあります。ANNYYS_D版の運用上の保守や保全性も性質上保つ事ができないことがあります。</p>
+                    <p>ANNYYS_Dを正しく機能させるには専用のプラグインとJAVA実行環境が必要です。<br>この文書は最後までお読みください。</p> 
+                    <p>【※注意事項】<br>本番環境において、FileMaker Server(Advanced) 無しでの運用は推奨していません。<br>動作速度が他の端末の処理内容によって大きく左右されやすく、実用において動作が非常に鈍くなることがあります。<br>ANNYYS_D版の運用上の保守や保全性に関しても、性質上、保つことができないことがあります。</p>
                 </div>
             </div>
             <div class="col-xs-2" style="background-color:white;"></div>
@@ -96,10 +96,10 @@
                 <blockquote>ANNYYS_Dパッケージ内容とファイルの設置場所</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;ダウンロードしたANNYYS_Dパッケージは解凍すると以下のようになっています。（基本動作に関係のないファイル・フォルダ類は表示していません。）</p>
-                    <p>&nbsp;&nbsp;&nbsp;これらのファイルをFileMaker Serverが稼働するマシン上に配置してください。</p>
-                    <p>&nbsp;&nbsp;&nbsp;※動作確認など試験的に起動したい場合。FileMakerProV11以上がインストールされているＰＣであればANNYYS_DファイルをWクリックしてすると起動できます。（使い方や動作内容はFileMaker Serverでホストされている内容とまったく同じです。）</p>
-                    <p>&nbsp;&nbsp;&nbsp;※解凍時にトップフォルダのANNYYS_D（赤字部分）が二重構造になっていないか注意してください。</p>
+                    <p>ダウンロードしたANNYYS_Dパッケージは解凍すると以下のようになっています。（基本動作に関係のないファイル・フォルダ類は表示していません。）</p>
+                    <p>これらのファイルをFileMaker Serverが稼働するマシン上に配置してください。</p>
+                    <p>※動作確認など試験的に起動したい場合。FileMakerProV11以上がインストールされているＰＣであればANNYYS_DファイルをWクリックしてすると起動できます。（使い方や動作内容はFileMaker Serverでホストされている内容とまったく同じです。）</p>
+                    <p>※解凍時にトップフォルダのANNYYS_D（赤字部分）が二重構造になっていないか注意してください。</p>
                 </div>
              <p><img class="center-block" src="images/030_001_file_haichi.png" width="536" height="547" alt="ダミー"></p> 
             </div>
@@ -114,10 +114,20 @@
                 <hr>
                 <blockquote>動作環境</blockquote>
                 <!--本文-->
-             <p><img class="center-block" src="images/030_002_dousa_kankyo.PNG" width="703" height="441" alt="ダミー"></p> 
+             <table border="1">
+             <caption></caption>
+             <tr><th>種類</th><th></th><th></th></tr>
+             <tr><td rowspan="3">サーバー<br><img src="images/030_002_server.png"></td><td colspan="2">FileMaker Server(Advanced)11 またはFileMaker Server(Advanced)12の動作する環境</td></tr>
+             <tr><td>OS</td><td>Windows2003 Server, Windows2008 Server<br>OS X Mountain Lion および OS X Mountain Lion Server v10.8 * (64-bit)</td></tr>
+             <tr><td>CPU他</td><td>Dual Core 2Ghz以上 / Memory:4GB / HDD:500GB<br>※実装メモリは8GB以上推奨、但しOSによるメモリ読み込制限があるので注意(Windows)</td></tr>
+             <tr><td rowspan="3">クライアント<br><img src="images/030_002_client.png"></td><td colspan="2">FileMakerPro(Advanced)11 またはFileMakerPro(Advanced)12の動作する環境</td></tr>
+             <tr><td>OS</td><td>Windows 8, Windows 8 Pro*<br>Windows 7 Ultimate, Professional, Home Premium*<br>Windows Vista Ultimate, Business, Home Premium (Service Pack 2)*<br>Windows XP Professional, Home Edition (Service Pack 3)*<br>OS X Mountain Lion v10.6,7,8*</td></tr>
+             <tr><td>CPU他</td><td>Dual Core 2Ghz以上 / Memory:4GB / HDD:500GB</td></tr>
+             <tr><td>プリンタ<br><img src="images/030_002_printer.png"></td><td colspan="2">任意、但しクライアントが実装するＯＳに対応したものである事。<br>ネットワークインターフェースを有しTCP/IPプロトコルで接続可能なプリンタを推奨。</td></tr>
+             </table>
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;※FileMakerPro(Advanced)およびFileMaker Server(Advenced)の最新の動作環境はhttp://www.filemaker.co.jp/を参照してください。</p>
-                    <p>&nbsp;&nbsp;&nbsp;※サーバおよびクライアントを仮想環境において実装する場合において割り当てる場合のリソーススペックも同程度に設定してください。</p>
+                    <p>※FileMakerPro(Advanced)およびFileMaker Server(Advanced)の最新の動作環境はhttp://www.filemaker.co.jp/を参照してください。</p>
+                    <p>※サーバおよびクライアントを仮想環境において実装する場合において割り当てる場合のリソーススペックも同程度に設定してください。</p>
                 </div>
             </div>
             <div class="col-xs-2" style="background-color:white;"></div>
@@ -132,19 +142,19 @@
                 <blockquote>ネットワークの構成例とFileMakerProのインストール</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;例えば以下のような環境において日レセを稼働させている環境が既にあると仮定します。</p> 
-                    <p>&nbsp;&nbsp;&nbsp;図のように日レセのインフラは何処かしらのベンダーのサポートを受けており、サーバーは主従2台構成で端末が2台あるという想定です。</p> 
-                    <p>&nbsp;&nbsp;&nbsp;端末はWindowsかMacOSで日レセクライアント(monsiaj)をインストールして稼働していると想定しています。</p> 
+                    <p>例えば、以下のような環境において、日レセを稼働させている環境が既にあると仮定します。</p> 
+                    <p>図のように、日レセのインフラは何処かしらのベンダーのサポートを受けており、<br>サーバーは主従2台構成で端末が2台あるという想定です。</p> 
+                    <p>端末はWindows か MacOS で日レセクライアント(monsiaj)をインストールして稼働していると想定しています。</p> 
                 </div>
              <p><img class="center-block" src="images/030_003_network_kouchiku.PNG" width="389" height="242" alt="ダミー"></p> 
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;ここにANNYYSを導入する場合以下のような構成を推奨しています。</p> 
-                    <p>&nbsp;&nbsp;&nbsp;サーバー機1台と診察室用の新たな端末２台を加え、既にある日レセ端末でもANNYYS_D版を使えるようにすると言う構成です。</p> 
+                    <p>ここにANNYYSを導入する場合以下のような構成を推奨しています。</p> 
+                    <p>サーバー機1台と診察室用の新たな端末２台を加え、既にある日レセ端末でもANNYYS_D版を使えるようにすると言う構成です。</p> 
                 </div>
              <p><img class="center-block" src="images/030_004_network_kouchiku.png" width="389" height="242" alt="ダミー"></p> 
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;（※プリンタはオプションです。）</p>
-                    <p>&nbsp;&nbsp;&nbsp;端末ＰＣがWindowsかMacOSであればFileMakerProと日レセクライアント(monsiaj)を同時にインストールする事は可能です。ただし日レセサポートベンダーから端末の供給やサポートを受けている場合は、該当ベンダーに確認が必要です。</p>
+                    <p>（※プリンタはオプションです。）</p>
+                    <p>端末ＰＣがWindows か MacOS であれば、FileMakerProと日レセクライアント(monsiaj)を同時にインストールする事は可能です。<br>ただし、日レセサポートベンダーから端末の供給やサポートを受けている場合は、該当ベンダーに確認が必要です。</p>
                 </div>
             </div>
             <div class="col-xs-2" style="background-color:white;"></div>
@@ -154,22 +164,21 @@
             <div class="col-md-3" style="background-color:white;"></div>
             <div class="col-md-8" style="background-color:white;">
                 <!--ページタイトル-->
-                <h3>FileMaker Server(Advenced)およびFileMakerProのインストール</h3>
+                <h3>FileMaker Server(Advanced)およびFileMakerProのインストール</h3>
                 <hr>
-                <blockquote>FileMaker Server(Advenced)およびFileMakerProのインストール</blockquote>
+                <blockquote>FileMaker Server(Advanced)およびFileMakerProのインストール</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                <p>&nbsp;&nbsp;&nbsp;端末として利用するPCにFileMaker Pro、サーバー機にはFileMaker Serverをインストールします。</p>
-                <p>&nbsp;&nbsp;&nbsp;FileMaker Server(Advenced)を(特にWindows2008以後に）インストールする場合、ファイヤーウォールの設定で必須ポートの開放を忘れないようにしてください。</p>
+                <p>端末として利用するPCに、FileMaker Pro、サーバー機にはFileMaker Serverをインストールします。</p>
+                <p>(特にWindows2008以後に） FileMaker Server(Advenced)をインストールする場合、<br>ファイヤーウォールの設定で必須ポートの開放を忘れないようにしてください</p>
                 </div>
                 <div style="border: solid black 1px;">
-                    <p>[抜粋]FileMaker Server入門ガイド　第 1 章クイックスタートインストール
-                    サーバーコンピュータにファイアウォールがある場合は、ファイアウォールの必要なポートを開いて、ユーザおよび管理者と通信できるようにします。
+                    <p>[抜粋]<br>FileMaker Server入門ガイド　第 1 章クイックスタートインストール<br><br>サーバーコンピュータにファイアウォールがある場合は、ファイアウォールの必要なポートを開いて、<br>ユーザおよび管理者と通信できるようにします。
                     </p>
                     <ol>
                         <li>すべての展開で必要なポート：5003、16000、および 16001。</li>
                         <li>Web 公開で必要なポート：80（HTTP）または 443（HTTPS）。</li>
-                        <li>ポート 5013、5015、16004、16006、16008、16010、16012、16014、16016、16018、16020、16021、および 50003 がマシン上で利用可能になっている必要がありますが、ファイアウォールでは開きません。詳細については、23 ページの「1台のマシンの展開」を参照してください。</li>
+                        <li>ポート 5013、5015、16004、16006、16008、16010、16012、16014、16016、16018、16020、16021、<br>および 50003 がマシン上で利用可能になっている必要がありますが、<br>ファイアウォールでは開きません。詳細については、23 ページの「1台のマシンの展開」を参照してください。</li>
                     </ol>
                 </div>
             </div>
@@ -185,7 +194,7 @@
                 <blockquote>セキュリティ</blockquote>
                 <!--本文-->
                 <div id="annys-tx">
-                    <p>&nbsp;&nbsp;&nbsp;ANNYYS_Dには以下のレベルでセキュリティが組み込まれています。アクセスアカウント及びパスワードのデフォルト値は非常に簡単なものなので実利用の際には変更して利用するようにしてください。</p>
+                    <p>ANNYYS_Dには以下のレベルでセキュリティが組み込まれています。<br>アクセスアカウント、及び、パスワードのデフォルト値は非常に簡単なものなので、実利用の際には変更して利用するようにしてください。</p>
                 </div>
                 
                     <table border>
@@ -197,7 +206,7 @@
                         <td>デフォルトアカウント<br>※パスワード共通</td><td>l1（エルイチ）</td><td>l2（エルニ）</td><td>l3（エルサン）</td><td>l4（エルヨン）</td><td>Admin（Pなし）</td>
                     </tr>
                     <tr>
-                        <td>概要</td><td>閲覧のみ</td><td>事務<br>患者登録<br>受付処理<br>会計処理</td><td>事務＆医師<br>患者登録<br>受付処理<br>診療記録<br>会計処理</td><td>管理者A<br>診療画面<br>患者情報のレイアウト変更<br></td><td rowspan="10">完全アクセス</td>
+                        <td>概要</td><td>閲覧のみ</td><td>事務<br>患者登録<br>受付処理<br>会計処理</td><td>事務＆医師<br>患者登録<br>受付処理<br>診療記録<br>会計処理</td><td>管理者A<br>診療画面<br>患者情報のレイアウト変更可<br></td><td rowspan="10">完全アクセス</td>
                     </tr>
                     <tr>
                         <td>受付画面</td><td>閲覧のみ</td><td>作成・編集</td><td>作成・編集</td><td>作成・編集</td>
