--- a/public_html/[010_000]mokuji.html
+++ b/public_html/[010_000]mokuji.html
@@ -264,7 +264,7 @@
                 </ol>
                 <p>　</p>
                 <p>　</p>
-                <h4>010-000　基本設計</h4>
+                <h4 class="mh4">010-000　基本設計</h4>
                  <div class="index_hr"></div>
                 
                 <ol type="1">
