--- a/public_html/[020_000]hajimeni.html
+++ b/public_html/[020_000]hajimeni.html
@@ -145,7 +145,7 @@
                     <p>&nbsp;&nbsp;&nbsp;医療情報化の分野ではまだまだ多くの工夫や知恵が必要だと感じています。</p>
                     <p>&nbsp;&nbsp;&nbsp;FileMakerのように分かりやすいプラットホームを基盤にして、医師・医療関係者・ディベロッパのそれぞれが隔たりのない情報交換を行う事で新たな知恵や工夫が生まれ、このネットワークが強力なバックアップとして機能するようになる事をANNYYS_D版事務局は目指しています。</p>
                 </div>
-             <p><img class="center-block" src="images/001.png" alt="サポート"></p> 
+             <p><img class="center-block" src="images/020_000_support.png" alt="サポート"></p> 
             </div>
             <div class="col-xs-2" style="background-color:white;"></div>
                 
