--- a/public_html/[030_000]setup.html
+++ b/public_html/[030_000]setup.html
@@ -101,7 +101,7 @@
                     <p>※動作確認など試験的に起動したい場合。FileMakerProV11以上がインストールされているＰＣであればANNYYS_DファイルをWクリックしてすると起動できます。（使い方や動作内容はFileMaker Serverでホストされている内容とまったく同じです。）</p>
                     <p>※解凍時にトップフォルダのANNYYS_D（赤字部分）が二重構造になっていないか注意してください。</p>
                 </div>
-             <p><img class="center-block" src="images/030_001_file_haichi.png" width="536" height="547" alt="ダミー"></p> 
+             <p><img class="center-block" src="images/030_001_file_haichi.png" alt="ファイル配置"></p> 
             </div>
             <div class="col-xs-2" style="background-color:white;"></div>
         </div>
@@ -117,13 +117,13 @@
              <table border="1">
              <caption></caption>
              <tr><th>種類</th><th></th><th></th></tr>
-             <tr><td rowspan="3">サーバー<br><img src="images/030_002_server.png"></td><td colspan="2">FileMaker Server(Advanced)11 またはFileMaker Server(Advanced)12の動作する環境</td></tr>
+             <tr><td rowspan="3">サーバー<br><img src="images/030_002_server.png" alt="サーバー"></td><td colspan="2">FileMaker Server(Advanced)11 またはFileMaker Server(Advanced)12の動作する環境</td></tr>
              <tr><td>OS</td><td>Windows2003 Server, Windows2008 Server<br>OS X Mountain Lion および OS X Mountain Lion Server v10.8 * (64-bit)</td></tr>
              <tr><td>CPU他</td><td>Dual Core 2Ghz以上 / Memory:4GB / HDD:500GB<br>※実装メモリは8GB以上推奨、但しOSによるメモリ読み込制限があるので注意(Windows)</td></tr>
-             <tr><td rowspan="3">クライアント<br><img src="images/030_002_client.png"></td><td colspan="2">FileMakerPro(Advanced)11 またはFileMakerPro(Advanced)12の動作する環境</td></tr>
+             <tr><td rowspan="3">クライアント<br><img src="images/030_002_client.png" alt="クライアント"></td><td colspan="2">FileMakerPro(Advanced)11 またはFileMakerPro(Advanced)12の動作する環境</td></tr>
              <tr><td>OS</td><td>Windows 8, Windows 8 Pro*<br>Windows 7 Ultimate, Professional, Home Premium*<br>Windows Vista Ultimate, Business, Home Premium (Service Pack 2)*<br>Windows XP Professional, Home Edition (Service Pack 3)*<br>OS X Mountain Lion v10.6,7,8*</td></tr>
              <tr><td>CPU他</td><td>Dual Core 2Ghz以上 / Memory:4GB / HDD:500GB</td></tr>
-             <tr><td>プリンタ<br><img src="images/030_002_printer.png"></td><td colspan="2">任意、但しクライアントが実装するＯＳに対応したものである事。<br>ネットワークインターフェースを有しTCP/IPプロトコルで接続可能なプリンタを推奨。</td></tr>
+             <tr><td>プリンタ<br><img src="images/030_002_printer.png" alt="プリンタ"></td><td colspan="2">任意、但しクライアントが実装するＯＳに対応したものである事。<br>ネットワークインターフェースを有しTCP/IPプロトコルで接続可能なプリンタを推奨。</td></tr>
              </table>
                 <div id="annys-tx">
                     <p>※FileMakerPro(Advanced)およびFileMaker Server(Advanced)の最新の動作環境はhttp://www.filemaker.co.jp/を参照してください。</p>
@@ -146,12 +146,12 @@
                     <p>図のように、日レセのインフラは何処かしらのベンダーのサポートを受けており、<br>サーバーは主従2台構成で端末が2台あるという想定です。</p> 
                     <p>端末はWindows か MacOS で日レセクライアント(monsiaj)をインストールして稼働していると想定しています。</p> 
                 </div>
-             <p><img class="center-block" src="images/030_003_network_kouchiku.PNG" width="389" height="242" alt="ダミー"></p> 
+             <p><img class="center-block" src="images/030_003_network_kouchiku.PNG" alt="ネットワーク"></p> 
                 <div id="annys-tx">
                     <p>ここにANNYYSを導入する場合以下のような構成を推奨しています。</p> 
                     <p>サーバー機1台と診察室用の新たな端末２台を加え、既にある日レセ端末でもANNYYS_D版を使えるようにすると言う構成です。</p> 
                 </div>
-             <p><img class="center-block" src="images/030_004_network_kouchiku.png" width="389" height="242" alt="ダミー"></p> 
+             <p><img class="center-block" src="images/030_004_network_kouchiku.png" alt="構成"></p> 
                 <div id="annys-tx">
                     <p>（※プリンタはオプションです。）</p>
                     <p>端末ＰＣがWindows か MacOS であれば、FileMakerProと日レセクライアント(monsiaj)を同時にインストールする事は可能です。<br>ただし、日レセサポートベンダーから端末の供給やサポートを受けている場合は、該当ベンダーに確認が必要です。</p>
