--- a/public_html/[040_000]nagare.html
+++ b/public_html/[040_000]nagare.html
@@ -82,7 +82,7 @@
                 <div id="annys-tx">
                     <p><img class="" src="images/040_001_nichisere_icon.png" width="50" height="61" alt="日セレ">&nbsp;日セレでの処理&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="" src="images/040_002_annyysd_icon.png" width="87" height="62" alt="エニーズ">&nbsp;ANNYYS_Dでの処理</p>
                 </div>
-             <p><img class="" src="images/040_003_nagare.png" width="481" height="690" alt="ダミー"></p> 
+             <p><img class="" src="images/040_003_nagare.png" alt="ながれ"></p> 
              <p>※日レセと連携している場合、</p>
              <ul>
                  <li>[窓口]患者情報および保険情報の登録は日レセ側で行います。<br>
@@ -109,8 +109,8 @@
                 <!--本文-->
                 <div id="annys-tx">
                     <p>ANNYYS_Dを起動した際に表示される最初の画面で<strong>[メインメニュー]</strong>になっています。</p>
-                     <p><img class="" src="images/040_004_kousei.png" width="1000" height="728" alt="構成"></p> 
-                     <p><img class="" src="images/040_005_mainmenu.png" width="1400" height="771" alt="構成"></p> 
+                     <p><img class="" src="images/040_004_mainmenu.PNG" alt="メインメニュー"></p> 
+                     <p><img class="" src="images/040_005_kousei.png" alt="構成"></p> 
                 </div>
                 <p>全他構成の概要としては<strong>[メインメニュー]</strong>>を中心に５つのカテゴリに分かれています。</p>
              <ul>
@@ -144,7 +144,7 @@
                 <!--本文-->
                 <div id="annys-tx">
                     <p>ANNYYS_D版では各種マスタ更新用のプログラムを別途用意しています。</p>
-                     <p><img class="" src="images/040_006_dbmanager.png" width="431" height="465" alt="マスター更新"></p> 
+                     <p><img class="" src="images/040_006_dbmanager.png" alt="マスター更新"></p> 
                     <p>DBManager（ディービーマネージャー）<br>
                     このプログラムは指定しているように、www.annyys.netより更新プログラムをダウンロードし更新処理を行います。</p>
                      <p>診療報酬情報提供サービスによる<br>
