--- a/public_html/[010_000]mokuji.html
+++ b/public_html/[010_000]mokuji.html
@@ -36,30 +36,34 @@
                 </div>
             </div>
             <div class="row" style="background-color:#7ba3ca">
-                <nav class="navbar-static-top">
-                    <div class="navbar-header">
+               <nav class="navbar-static-top">
+                    <!--<div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gnavi">
                             <span class="sr-only">メニュー</span>
                             <span class="icon-bar"></span>
                         </button>
-                    </div>
+                    </div>-->
                     
                     <!--スマホ用トグル-->
                     <nav class="globNav-row">
-                        <span class="globNav-toggle">　メニュー</span>
+                       <span class="globNav-toggle"><a class="menu-trigger" href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </a></span>
                              <ul class="globNav-inner" style="list-style:none">
-                                <li><a href="index_1.html">TOP</a></li>
-                                <li><a href="[010_000]mokuji.html">目次</a></li>
-                                <li><a href="[020_000]hajimeni.html">はじめに</a></li>
-                                <li><a href="[030_000]setup.html">セットアップ</a></li>
-                                <li><a href="[040_000]nagare.html">診察の流れ</a></li>
-                                <li><a href="[050_000]uketsuke.html">来院受付</a></li>
-                                <li><a href="[060_000]gamen.html">診察画面</a></li>
-                                <li><a href="[070_000]karute.html">カルテ記録</a></li>
-                                <li><a href="[080_000]kanja.html">患者情報</a></li>
-                                <li><a href="[090_000]master.html">マスタ管理</a></li>
-                                <li><a href="[010_000]sekkei.html">基本設計</a></li>
-                                <li><a href="[011_000]renkei.html">日レセ連携</a></li>
+                                <li><a href="index_1.html">　　TOP</a></li>
+                                <li><a href="[010_000]mokuji.html">　　目次</a></li>
+                                <li><a href="[020_000]hajimeni.html">　　はじめに</a></li>
+                                <li><a href="[030_000]setup.html">　　セットアップ</a></li>
+                                <li><a href="[040_000]nagare.html">　　診察の流れ</a></li>
+                                <li><a href="[050_000]uketsuke.html">　　来院受付</a></li>
+                                <li><a href="[060_000]gamen.html">　　診察画面</a></li>
+                                <li><a href="[070_000]karute.html">　　カルテ記録</a></li>
+                                <li><a href="[080_000]kanja.html">　　患者情報</a></li>
+                                <li><a href="[090_000]master.html">　　マスタ管理</a></li>
+                                <li><a href="[010_000]sekkei.html">　　基本設計</a></li>
+                                <li><a href="[011_000]renkei.html">　　日レセ連携</a></li>
                              </ul>
 　　　　　　　　　　　</nav>
                     
