--- a/public_html/[030_000]setup.html
+++ b/public_html/[030_000]setup.html
@@ -51,7 +51,7 @@
                             <li><a href="[000_000]index.html">TOP</a></li>
                             <li><a href="[010_000]mokuji.html">目次</a></li>
                             <li><a href="[020_000]hajimeni.html">はじめに</a></li>
-                            <li><a href="[030_000]setup.html">セットアップ</a></li>
+                            <li><a class="current_page" href="[030_000]setup.html">セットアップ</a></li>
                             <li><a href="[040_000]nagare.html">診察の流れ</a></li>
                             <li><a href="[050_000]uketsuke.html">来院受付</a></li>
                             <li><a href="[060_000]gamen.html">診察画面</a></li>
