--- a/public_html/[050_000]uketsuke.html
+++ b/public_html/[050_000]uketsuke.html
@@ -74,7 +74,7 @@
            <div id="gnavi" class="collapse navbar-collapse">
                <ul class="nav navbar-nav" role="menu">
                             <li><a href="[000_000]index.html">TOP</a></li>
-                            <li><a class="current_page" href="[010_000]mokuji.html">目次</a></li>
+                            <li><a href="[010_000]mokuji.html">目次</a></li>
                             <li><a href="[020_000]hajimeni.html">はじめに</a></li>
                             <li><a href="[030_000]setup.html">セットアップ</a></li>
                             <li><a href="[040_000]nagare.html">診察の流れ</a></li>
