--- a/public_html/[000_000]index.html
+++ b/public_html/[000_000]index.html
@@ -88,14 +88,13 @@
     </header>
     <!--コンテンツ設定-->
    <br>
-   <br>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2" style="background-color:white;"></div>
             <div class="col-md-8" style="background-color:white;">
                 <!--ページタイトル-->
                 <div class="hr_h3">
-                <h3 class="page_title">ANNYYS_D版　操作マニュアル</h3>
+                <h3 class="top_title">ANNYYS_D版　操作マニュアル</h3>
                 </div><!--hr_h3-->
              
                
@@ -118,8 +117,6 @@
     </div>
    <br>
    <br>
-   <br>
-   
     <!--Footer設定-->
     <footer>
         <div class="container-fluid">
