--- a/public_html/[020_000]hajimeni.html
+++ b/public_html/[020_000]hajimeni.html
@@ -195,9 +195,9 @@ $(window).scroll(function () {
                 <!--本文-->
                 <div id="annys-tx">
                     <ul class="contents_ul"  style="list-style: none;">
-                    <li>ANNYYS_D版はORCAと連携する機能を標準で装備しています。ANNYYS_D版に記録された診療行為や病名をORCAに送信し、患者情報や保健情報などをORCAから読み込むことができます。</li><br>
-                    <li>FileMakerがベースとなっている事で、MacOS、Windows のどちらの環境でも (混在していても) ネットワーク上で同じシステムを動かすことができます。さらにiPadやiPhoneなど、モバイル端末にも対応できる環境を標準で装備していますので、効率よく情報共有を行う事ができます。</li><br>
-                    <li>ANNYYS_D版はこれまでのANNYYS®で蓄積されたノウハウを活かして設計されています。例えば一例として、個々の医師別やそれぞれの診療科別にカスタマイズされたものをとても運用する事が簡単に行えます。これは病院などの多診療科を有し、外勤医師も抱える施設で力を発揮します。誰かが使い勝手の悪いところを我慢する必要はありません。利用する医師に合わせたインタフェースを準備し診療内容に合わせたマスタを個別に設定することができます。ANNYYS_Dではセキュリティ面を確保しながら、とても柔軟な運用スタイルを構築できるようになっています。</li>
+                    <li>☆ANNYYS_D版はORCAと連携する機能を標準で装備しています。ANNYYS_D版に記録された診療行為や病名をORCAに送信し、患者情報や保健情報などをORCAから読み込むことができます。</li><br>
+                    <li>☆FileMakerがベースとなっている事で、MacOS、Windows のどちらの環境でも (混在していても) ネットワーク上で同じシステムを動かすことができます。さらにiPadやiPhoneなど、モバイル端末にも対応できる環境を標準で装備していますので、効率よく情報共有を行う事ができます。</li><br>
+                    <li>☆ANNYYS_D版はこれまでのANNYYS®で蓄積されたノウハウを活かして設計されています。例えば一例として、個々の医師別やそれぞれの診療科別にカスタマイズされたものをとても運用する事が簡単に行えます。これは病院などの多診療科を有し、外勤医師も抱える施設で力を発揮します。誰かが使い勝手の悪いところを我慢する必要はありません。利用する医師に合わせたインタフェースを準備し診療内容に合わせたマスタを個別に設定することができます。ANNYYS_Dではセキュリティ面を確保しながら、とても柔軟な運用スタイルを構築できるようになっています。</li>
                     </ul>
                     <br>
                 </div><!--annys-tx-->
